# pages/api/auth/githuboauth.ts
@@ -1,18 +1,0 @@
-import type { NextApiRequest, NextApiResponse } from 'next'
-/**
- * @swagger
- * /api/auth/githuboauth:
- *   get:
- *     description: github oauth login
- *     responses:
- *       200:
- *         description: successfully login with the github oauth account
- *       400:
- *         description: failed to log in 
- *         content:
- *           application/json:
- *             type: Object
- *             properties:
- *               message:
- *                 type: string
- */
